<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/connectionIssueIconColor"
                        android:contentDescription="@string/imageview_place_holder"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="100dp"
                        app:srcCompat="@drawable/ic_server_error" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_centerHorizontal="true">

                        <TextView
                            style="@style/TextAppearance.AppCompat.Headline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="250dp"
                            android:text="@string/no_connection_title" />

                        <TextView
                            style="@style/TextAppearance.AppCompat.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp16"
                            android:layout_gravity="center"
                            android:text="@string/no_connection_content"
                            android:textColor="@android:color/darker_gray" />

                        <Button
                            android:id="@+id/bErrorRefreshFragment"
                            style="@style/BlueButtonViewAppearance.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="50dp"
                            android:text="@string/no_connection_retry" />

                    </LinearLayout>

                </RelativeLayout>
</layout>