<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="ingredients"
            type="com.nuhkoca.udacitybakingapp.model.Ingredients" />
    </data>

    <android.support.v7.widget.CardView
        android:id="@+id/cvIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/IngredientsCardViewAppearance">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp8"
            android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/quantity_label"
                        style="@style/StepAppearance.Label"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@{String.valueOf(ingredients.quantity)}"
                        style="@style/StepAppearance.Item" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/measure_label"
                        style="@style/StepAppearance.Label"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@{ingredients.measure}"
                        style="@style/StepAppearance.Item" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/ingredient_label"
                        style="@style/StepAppearance.Label"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@{ingredients.ingredient}"
                        android:lines="3"
                        style="@style/StepAppearance.Item"/>
                </LinearLayout>

            </LinearLayout>

    </android.support.v7.widget.CardView>
</layout>